--- a/blog/angular.json
+++ b/blog/angular.json
@@ -24,10 +24,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-			  "node_modules/bootstrap/dist/css/bootstrap.css",
-			  "node_modules/font-awesome/css/font-awesome.min.css"
-
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/font-awesome/css/font-awesome.min.css",
+              "src/styles.css"
             ],
             "scripts": []
           },
